# hardcode-rts

./: .clang-format  .gitmodules  CMakeLists.txt  format-apply.sh  format-verify.sh
api/: entities.proto  error.proto  packet_scheme.txt  requests.proto  responses.proto  room_lobby.proto  session_level.proto
image_sources/effects/pestilence-disease/: build
image_sources/effects/pestilence-missile/: build
image_sources/effects/pestilence-splash/: build  make-pestilence-splash
image_sources/effects/rocket/: build  make-rocket-jet
image_sources/effects/rocket-explosion/: build  make-explosion-splash
image_sources/hud/actions/: build
image_sources/units/contaminator/: build
image_sources/units/goon/: build  make-rocket-launcher-splash
image_sources/units/seal/: build
libapi/: CMakeLists.txt
libhardcode/: CMakeLists.txt
libhccn/: CMakeLists.txt  client_to_server.cpp  client_to_server.h  common.h  internal.cpp  internal.h  libhccn.pri  server_to_client.cpp  server_to_client.h
libmatchstate/: CMakeLists.txt  actions.h  matchstate.cpp  matchstate.h  matchstate_clientfromplayer.cpp  matchstate_clientfromserver.cpp  matchstate_serverfromclient.cpp  matchstate_tick.cpp  offset.h  positionaverage.h  unit.h
librtsn/: CMakeLists.txt  parse.cpp  serialize.h
match_state/: actions.h  attack_description.h  corpse.h  effects.h  match_state.pri  matchstate.cpp  matchstate.h  matchstate_clientfromplayer.cpp  matchstate_clientfromserver.cpp  matchstate_serverfromclient.cpp  matchstate_tick.cpp  position.h  rectangle.h  scale.h  unit.cpp  unit.h
mock_client/: README.md  main.cpp  mock_client.pro
rts_client/: CLASS_SET  CMakeLists.txt  TODO  actionpanelrenderer.cpp  actionpanelrenderer.h  application.cpp  application.h  authorizationcredentials.cpp  authorizationcredentials.h  authorizationprogresswidget.cpp  authorizationprogresswidget.h  authorizationwidget.cpp  authorizationwidget.h  coloredrenderer.cpp  coloredrenderer.h  coloredtexturedrenderer.cpp  coloredtexturedrenderer.h  coordmap.cpp  coordmap.h  effectrenderer.cpp  effectrenderer.h  groupoverlayrenderer.cpp  groupoverlayrenderer.h  hud.cpp  hud.h  hudrenderer.cpp  hudrenderer.h  lobbywidget.cpp  lobbywidget.h  logoverlay.cpp  logoverlay.h  main.cpp  mainwindow.cpp  mainwindow.h  minimaprenderer.cpp  minimaprenderer.h  network_manager.cpp  network_manager.h  network_thread.cpp  network_thread.h  (+32 more)
rts_client/fonts/: NotCourierSans.AUTHORS  OpenSans.AUTHOR
rts_client/gpu_programs/colored/: main.frag  main.vert
rts_client/gpu_programs/colored_textured/: main.frag  main.vert
rts_client/gpu_programs/textured/: main.frag  main.vert
rts_client/screens/: authorizationprogressscreen.cpp  authorizationprogressscreen.h  authorizationscreen.cpp  authorizationscreen.h  authorizationwidget.cpp  lobbyscreen.cpp  lobbyscreen.h  profilepopup.cpp  profilepopup.h  profilewidget.cpp  readinessscreen.cpp  readinessscreen.h  roleselectionprogressscreen.cpp  roleselectionprogressscreen.h  roleselectionscreen.cpp  roleselectionscreen.h  roomsettingspopup.cpp  roomsettingspopup.h
rts_server/: CMakeLists.txt  README.md  application.cpp  application.h  main.cpp  network_manager.cpp  network_manager.h  network_thread.cpp  network_thread.h  room.cpp  room.h  room_thread.cpp  room_thread.h  rts_server.pro  session.h  users.txt
rtsn/: parse.cpp  parse.h  rtsn.pri  serialize.cpp  serialize.h
